--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,5 @@ spring:
   profiles:
     group:
       develop: develop
+      develop-hsj: develop, develop-hsj
     active: develop # 실행 원하는 spring.profiles.group 지정
