--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -40,6 +40,27 @@ logging:
               BasicBinder: TRACE
 
 ---
+# integration test profile
+spring:
+  config:
+    activate:
+      on-profile: develop-integration-test
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: tmax
+    password: tmax
+    driverClassName: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    generate-ddl: true
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    hibernate:
+      ddl-auto: update
+
+---
 # 한상준's profile
 server:
   port: 8081
