chore: gradle 빌드 오류 수정

--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,9 @@ dependencies {
 	*/
 	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
 	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.2.Final'
-	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processo
+	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
 	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.2.Final'
+	testAnnotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.2.Final'
 
 	// https://mvnrepository.com/artifact/org.projectlombok/lombok
 	compileOnly 'org.projectlombok:lombok'
