build: Jenkinsfile 틀린 문법 수정

--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -26,12 +26,14 @@ pipeline {
 
         stage('Docker Build') {
             steps {
-                try {
-                    sh 'docker-compose --env-file ./deploy/.env -f ./deploy/docker-compose.yml down --rmi all'
-                 } catch (err) {
-                    echo "failed to remove docker-compose: ${err}"
-                 } finally {
-                    sh 'docker-compose --env-file ./deploy/.env -f ./deploy/docker-compose.yml up -d'
+                script{
+                    try {
+                        sh 'docker-compose --env-file ./deploy/.env -f ./deploy/docker-compose.yml down --rmi all'
+                    } catch (err) {
+                        echo "failed to remove docker-compose: ${err}"
+                    } finally {
+                        sh 'docker-compose --env-file ./deploy/.env -f ./deploy/docker-compose.yml up -d'
+                    }
                 }
             }
         }
