--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -85,3 +85,16 @@ spring:
     url: jdbc:mysql://localhost:3307/superstore
     username: tmax
     password: tmax
+
+---
+server:
+  port: 8081
+
+spring:
+  config:
+    activate:
+      on-profile: develop-cjh
+  datasource:
+    url: jdbc:mysql://localhost:3306/superstore
+    username: root
+    password: 1234
