feat: javaSender 빈 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   config:
     import:
     - classpath:application-develop.yml
+    - classpath:email.yml
   profiles:
     group:
       develop: develop
