--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -52,7 +52,7 @@ spring:
     activate:
       on-profile: develop-integration-test
   datasource:
-    url: jdbc:h2:mem:mydb
+    url: jdbc:h2:mem:mydb;MODE=MySQL
     username: tmax
     password: tmax
     driverClassName: org.h2.Driver
