--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation("com.squareup.okhttp3:okhttp:4.9.1")
+	testImplementation("com.squareup.okhttp3:mockwebserver:4.9.1")
 	implementation 'mysql:mysql-connector-java'
 	/**
 	* NOTE: mapstruct가 lombok보다 먼저 위치해야 한다
