--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -45,5 +45,22 @@ services:
     networks:
       superstore_network:
 
+  superstore-redis:
+    image: redis:alpine
+    #   restart: always
+    command:
+      - redis-server
+      - --requirepass
+      - tmax
+    labels: # will be used for filtering after cluster created
+      - "name=redis"
+      - "mode=standalone"
+    container_name: superstore-redis-standalone
+    hostname: superstore-redis-standalone
+    ports:
+      - "${EXPOSE_REDIS_PORT}:6379"
+    networks:
+      superstore_network:
+
 networks:
   superstore_network:
