--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -33,10 +33,10 @@ spring:
       platform: develop
       mode: always
       continue-on-error: true
-#  data:
-#    redis:
-#      repositories:
-#        enabled: false
+  data:
+    redis:
+      repositories:
+        enabled: false
 #  redis:
 #    host: localhost
 #    port: 6379
