chore: database 초기화 파일 수정

--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -111,7 +111,6 @@ spring:
     init:
       platform: develop
       mode: always
-      continue-on-error: true
       # continue-on-error: false
 
 ---
@@ -119,18 +118,28 @@ server:
   port: 8081
 
 spring:
+
   config:
     activate:
       on-profile: develop-cjh
   datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/superstore
     username: root
     password: 1234
   jpa:
+    show-sql: true
     defer-datasource-initialization: true
+    generate-ddl: true
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    properties:
+      hibernate:
+        ddl-auto: create
+        format_sql: true
   sql:
     init:
       platform: develop
       mode: always
-      continue-on-error: true
+      # continue-on-error: true
       # continue-on-error: false
