chore: jenkins 스크립트 실패시 출력 제대로 안나오는 현상 수정

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,9 @@ dependencies {
 
 test { 
 	outputs.dir snippetsDir
+	// testLogging {
+	// 	showStandardStreams = true
+	// }
 }
 
 asciidoctor { 
