--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -20,8 +20,9 @@ pipeline {
         stage('Test') {
             steps {
                 script {
+                    String output
                     try {
-                        def output = sh(script: './gradlew clean test', returnStdout: true)
+                        output = sh(script: './gradlew clean test', returnStdout: true)
                     } catch (err) {
                         FAILURE_TITLE = 'gradle test 실패'
                         FAILURE_REASON = output
