--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -20,8 +20,8 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     # database-platform: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
-#    hibernate:
-#      ddl-auto: create
+    hibernate:
+      ddl-auto: update
     defer-datasource-initialization: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
