--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ dependencies {
 	implementation group: 'org.hibernate.validator', name: 'hibernate-validator'
 
 	//For MacOs DnsError
-	//implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
+	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
 	implementation 'org.apache.httpcomponents:httpclient:4.5'
 
 	// https://mvnrepository.com/artifact/com.h2database/h2
