--- a/src/main/resources/email.yml
+++ b/src/main/resources/email.yml
@@ -1,8 +1,8 @@
 spring:
   mail:
-    host: smtp.naver.com
-    port: 465
-    username: totw2018
-    password:
+    host: smtp.gmail.com
+    port: 587
+    username: tmaxcommerce
+    password: ptwfeodrfrdaghyt
     default:
       encoding: UTF-8
