feat: application.yml 수정

--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -143,3 +143,34 @@ spring:
       mode: always
       # continue-on-error: true
       # continue-on-error: false
+
+---
+# 조현준's profile
+server:
+  port: 8081
+
+spring:
+
+  config:
+    activate:
+      on-profile: develop-chj
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/superstore
+    username: root
+    password: 1234
+  jpa:
+    show-sql: true
+    defer-datasource-initialization: true
+    generate-ddl: true
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    properties:
+      hibernate:
+        ddl-auto: create
+        format_sql: true
+  sql:
+    init:
+      platform: develop
+      mode: always
+---
