--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -157,8 +157,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/superstore
-    username: root
-    password: 1234
+    username: tmax
+    password: tmax
   jpa:
     show-sql: true
     defer-datasource-initialization: true
