--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -21,7 +21,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     # database-platform: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
     defer-datasource-initialization: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
