feat: 주문에 pickup 객체 연결

--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -108,6 +108,8 @@ spring:
     password: tmax
   # https://docs.spring.io/spring-boot/docs/2.7.2/reference/htmlsingle/#howto.data-initialization.using-basic-sql-scripts
   jpa:
+    hibernate:
+      ddl-auto: update
     defer-datasource-initialization: true
   sql:
     init:
