refactor: 배송/배달 동시성 문제 select for update로 변경

--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -172,8 +172,13 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     properties:
       hibernate:
+        #        ddl-auto: create
         ddl-auto: create
         format_sql: true
+      javax:
+        persistence:
+          query:
+            timeout: 5000
   sql:
     init:
       data-locations: classpath:develop_sql/*
