Bugfix: conflict 문제 해결 및 rebase

--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -172,8 +172,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     properties:
       hibernate:
-        #        ddl-auto: create
-        ddl-auto: create
+        ddl-auto: create-drop
         format_sql: true
       javax:
         persistence:
