build : continue-on-error 옵션 추가

--- a/src/main/resources/application-develop.yml
+++ b/src/main/resources/application-develop.yml
@@ -147,6 +147,7 @@ spring:
     init:
       data-locations: classpath:develop_sql/*
       mode: always
+      continue-on-error: true
       # continue-on-error: true
       # continue-on-error: false
 
